<resources>
    <string name="app_name">SitWell</string>
    <string name="instruction_title_habit">Please follow the steps to set up your environment:</string>
    <string name="instruction_content_habit">
        Please follow the steps to set up your environment:\n
        <br>1. Connect the web camera to your computer.\n</br>
        <br>2. Make sure your camera has the required drivers installed.\n</br>
        <br>3. Place the webcam at the top mid of the monitor as shown below:</br>

    </string>
    <string name="instruction_content_habit4">Finally, use computer to browse the following websites:\n
        <br>https://nodesitwell.herokuapp.com/ \n</br>
    </string>
    <string name="instruction_content_habit_setUp">
        Please follow the steps to set up your correct sitting posture:\n
        <br>1. The screen will display a photo which captured by your webcam\n</br>
        <br>2. If the photo contain your correct sitting posture, please press the ok button\n</br>

    </string>
    <string name="course_instruction">Welcome to sitwell. sitwell is a sitting posture correct app that will provide a 9-weeks course to correct your sitting habit.</string>
    <string name="lying_lateral_leg_lift_instruction">Requirement for this training:\n
        <br>A place to lie down Lie on one side, keeping your lower leg slightly bent on the ground.\n</br>
        <br>Engage your core by drawing your belly button in toward your spine.\n</br>
        <br>Raise your top leg without moving the rest of your body. Hold for 2 seconds at the top. Repeat 10 times.\n</br></string>

    <string name="menu_home">Home</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_signout">Sign out</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="setting_text">Setting</string>

    <string-array name="ViewDataArr">
        <item>Choose Dataset</item>
        <item>Recent Days</item>
        <item>Last 7 days</item>
        <item>Last 14 days</item>
        <item>Last 21 days</item>
    </string-array>
    <string name="title_about">About SitWell</string>
    <string name="content_about">SitWell is a sitting posture correct app that will provide a 9-weeks course to correct your sitting habit.</string>
    <string name="title_how">How it works?</string>
    <string name="content_how">There is mainly composed of three important components: correction, relaxation and training.</string>
    <string name="title_correction">Correction</string>
    <string name="content_correction">It can help you to build the habit of adapting a good sitting posture. It will connect to your computer camera and notify you when you are in a unhealthy sitting posture.</string>
    <string name="title_relaxAndTraining">Relaxation &amp; Training</string>
    <string name="content_relaxAndTraining">Studies show that one of the main reason of having a bad sitting posture is due to poor muscle conditions. It will guide you to do some relaxation/training of muscles through your phone\'s camera and voice and improve your sitting posture.</string>





</resources>