<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_action_analytics"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_account"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/menu_setting" />
    </group>
    <group
        android:id="@+id/nav_footer">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_action_signout"
            android:title="@string/menu_signout" />
    </group>
</menu>